# serial-interface

./: CMakeLists.txt  package.xml
doc/: class_diagram.uxf  design_rationale.odt
docs_build/serial_interface/serial_interface-public-cc-api/: Doxyfile.rosdoc2  Doxyfile.rosdoc2_default
docs_build/serial_interface/serial_interface/default_sphinx_project/: conf.py
docs_build/serial_interface/serial_interface/wrapped_sphinx_directory/: conf.py  index.rst
docs_build/serial_interface/serial_interface/wrapped_sphinx_directory/standard_docs/original/: package.xml
docs_output/serial_interface/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  standards.html
docs_output/serial_interface/.doctrees/: environment.pickle  index.doctree  standards.doctree
docs_output/serial_interface/.doctrees/standard_docs/: CONTRIBUTING.doctree  LICENSE.doctree  PACKAGE.doctree
docs_output/serial_interface/.doctrees/standard_docs/original/: CONTRIBUTING.doctree
docs_output/serial_interface/standard_docs/: CONTRIBUTING.html  LICENSE.html  PACKAGE.html
docs_output/serial_interface/standard_docs/original/: CONTRIBUTING.html
include/serial_interface/: data_frame.hpp  frame_types.hpp  libserial_bridge.hpp  serial_decoder.hpp  serial_interface.hpp
src/: libserial_bridge.cpp  serial_decoder.cpp
test/: test_angular_vel.cpp  test_libserial_bridge.cpp  test_linear_accel.cpp
